--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <option value="">All</option>
             <option value="Privileged">Privileged</option>
             <option value="Not Privileged">Not Privileged</option>
-            <option value="Needs Review">Needs Review</option>
+            <option value="Unreviewed">Unreviewed</option>
           </select>
         </label>
 
@@ -72,7 +72,7 @@
             <option value="">All</option>
             <option value="Responsive">Responsive</option>
             <option value="Non-Responsive">Non-Responsive</option>
-            <option value="Needs Review">Needs Review</option>
+            <option value="Unreviewed">Unreviewed</option>
           </select>
         </label>
       </div>
@@ -149,7 +149,7 @@
         <label class="field">
           <span>Responsive</span>
           <select id="respCode">
-            <option value="Needs Review">Needs Review</option>
+            <option value="Unreviewed">Unreviewed</option>
             <option value="Responsive">Responsive</option>
             <option value="Non-Responsive">Non-Responsive</option>
           </select>
@@ -158,7 +158,7 @@
         <label class="field">
           <span>Privilege</span>
           <select id="privCode">
-            <option value="Needs Review">Needs Review</option>
+            <option value="Unreviewed">Unreviewed</option>
             <option value="Not Privileged">Not Privileged</option>
             <option value="Privileged">Privileged</option>
           </select>
