--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="logo">ED</div>
       <div>
         <div class="title">Mini E-Discovery Review</div>
-        <div class="subtitle">Training UI • 50 mock documents • local-only coding</div>
+        <div class="subtitle">Training UI • Mock documents • local-only coding</div>
       </div>
     </div>
 
@@ -180,5 +180,6 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
