--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="brand">
       <div class="logo">ED</div>
       <div>
-        <div class="title">Mini E-Discovery Review</div>
+        <div class="title">E-Discovery Review</div>
         <div class="subtitle">Training UI • Mock documents • local-only coding</div>
       </div>
     </div>
@@ -180,6 +180,7 @@
   <script src="app.js"></script>
 </body>
 </html>
+
 
 
 
